--- a/GUI/video_inteligente_gui/realtime/templates/index.html
+++ b/GUI/video_inteligente_gui/realtime/templates/index.html
@@ -63,10 +63,10 @@ preloadFlag = true;
 </tr>
 <tr>
 <td colspan="7" class="text2" align="left" height="109" valign="top" width="319">
-Numero de pessoas : {{oi}} (lotacao de 10%)
-<p>Numero de pessoas na fila: 0</p>
-<p>Tempo de espera aproximado na fila (min.): 0,7 </p>
-<p>Ultima atualizacao: 02/12/2017, 17:31 </p>
+Numero de pessoas : {{oi}} (lotacao de {{lotacao}}%)
+<p>Numero de pessoas na fila: {{numero_fila}}</p>
+<p>Tempo medio na fila (seg.): {{tempo_medio}} </p>
+<p>Ultima atualizacao: {{horario}} </p>
 
 
 
