--- a/GUI/video_inteligente_gui/realtime/templates/Home_admin.html
+++ b/GUI/video_inteligente_gui/realtime/templates/Home_admin.html
@@ -295,140 +295,7 @@
           </form>
           <!-- /.search form -->
           <!-- sidebar menu: : style can be found in sidebar.less -->
-          <ul class="sidebar-menu">
-            <li class="header">MAIN NAVIGATION</li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="../../static/template_admin/index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                <li><a href="../../static/template_admin/index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-files-o"></i>
-                <span>Layout Options</span>
-                <span class="label label-primary pull-right">4</span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-                <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-                <li><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-                <li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="../widgets.html">
-                <i class="fa fa-th"></i> <span>Widgets</span> <small class="label pull-right bg-green">new</small>
-              </a>
-            </li>
-            <li class="treeview active">
-              <a href="#">
-                <i class="fa fa-pie-chart"></i>
-                <span>Charts</span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                <li class="active"><a href="flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                <li><a href="inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-laptop"></i>
-                <span>UI Elements</span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="../UI/general.html"><i class="fa fa-circle-o"></i> General</a></li>
-                <li><a href="../UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
-                <li><a href="../UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
-                <li><a href="../UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
-                <li><a href="../UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
-                <li><a href="../UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-edit"></i> <span>Forms</span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="../forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                <li><a href="../forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-table"></i> <span>Tables</span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="../tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                <li><a href="../tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="../calendar.html">
-                <i class="fa fa-calendar"></i> <span>Calendar</span>
-                <small class="label pull-right bg-red">3</small>
-              </a>
-            </li>
-            <li>
-              <a href="../mailbox/mailbox.html">
-                <i class="fa fa-envelope"></i> <span>Mailbox</span>
-                <small class="label pull-right bg-yellow">12</small>
-              </a>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-folder"></i> <span>Examples</span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="../examples/invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
-                <li><a href="../examples/login.html"><i class="fa fa-circle-o"></i> Login</a></li>
-                <li><a href="../examples/register.html"><i class="fa fa-circle-o"></i> Register</a></li>
-                <li><a href="../examples/lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-                <li><a href="../examples/404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-                <li><a href="../examples/500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-                <li><a href="../examples/blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <i class="fa fa-share"></i> <span>Multilevel</span>
-                <i class="fa fa-angle-left pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-                <li>
-                  <a href="#"><i class="fa fa-circle-o"></i> Level One <i class="fa fa-angle-left pull-right"></i></a>
-                  <ul class="treeview-menu">
-                    <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-                    <li>
-                      <a href="#"><i class="fa fa-circle-o"></i> Level Two <i class="fa fa-angle-left pull-right"></i></a>
-                      <ul class="treeview-menu">
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-              </ul>
-            </li>
-            <li><a href="../../static/template_admin/documentation/index.html"><i class="fa fa-book"></i> Documentation</a></li>
-            <li class="header">LABELS</li>
-            <li><a href="#"><i class="fa fa-circle-o text-danger"></i> Important</a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-warning"></i> Warning</a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-info"></i> Information</a></li>
-          </ul>
-        </section>
+  
         <!-- /.sidebar -->
       </aside>
 
@@ -453,7 +320,7 @@
               <!-- small box -->
               <div class="small-box bg-aqua">
                 <div class="inner">
-                  <h3>10</h3>
+                  <h3>{{ultimo_numero.num_de_pessoas}}</h3>
                   <p>Pessoas Presentes</p>
                 </div>
                 <div class="icon">
@@ -466,7 +333,7 @@
               <!-- small box -->
               <div class="small-box bg-green">
                 <div class="inner">
-                  <h3>10<sup style="font-size: 20px">%</sup></h3>
+                  <h3>{{lotacao}}<sup style="font-size: 20px">%</sup></h3>
                   <p>Lotacao</p>
                 </div>
                 <div class="icon">
@@ -479,7 +346,7 @@
               <!-- small box -->
               <div class="small-box bg-yellow">
                 <div class="inner">
-                  <h3>0,7<sup style="font-size: 20px">(min.)</sup></h3>
+                  <h3>{{tempo_medio}}<sup style="font-size: 20px">(seg.)</sup></h3>
                   <p>Tempo médio de espera na fila</p>
                 </div>
                 <div class="icon">
@@ -492,7 +359,7 @@
               <!-- small box -->
               <div class="small-box bg-red">
                 <div class="inner">
-                  <h3>0</h3>
+                  <h3>{{numero_fila}}</h3>
                   <p>Pessoas atualmente na fila</p>
                 </div>
                 <div class="icon">
@@ -504,7 +371,7 @@
           </div><!-- /.row -->
 
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
               <!-- Line chart -->
               <div class="box box-primary">
                 <div class="box-header">
@@ -517,41 +384,15 @@
               </div><!-- /.box -->
 
               <!-- Area chart -->
-              <div class="box box-primary">
-                <div class="box-header">
-                  <i class="fa fa-bar-chart-o"></i>
-                  <h3 class="box-title">Full Width Area Chart</h3>
-                </div>
-                <div class="box-body">
-                  <div id="area-chart" style="height: 338px;" class="full-width-chart"></div>
-                </div><!-- /.box-body-->
-              </div><!-- /.box -->
+
 
             </div><!-- /.col -->
 
-            <div class="col-md-6">
-              <!-- Bar chart -->
-              <div class="box box-primary">
-                <div class="box-header">
-                  <i class="fa fa-bar-chart-o"></i>
-                  <h3 class="box-title">Tempo médio de permanência em ambientes hoje (minutos)</h3>
-                </div>
-                <div class="box-body">
-                  <div id="bar-chart" style="height: 300px;"></div>
-                </div><!-- /.box-body-->
-              </div><!-- /.box -->
+            
 
               <!-- Donut chart -->
-              <div class="box box-primary">
-                <div class="box-header">
-                  <i class="fa fa-bar-chart-o"></i>
-                  <h3 class="box-title">Donut Chart</h3>
-                </div>
-                <div class="box-body">
-                  <div id="donut-chart" style="height: 300px;"></div>
-                </div><!-- /.box-body-->
-              </div><!-- /.box -->
-            </div><!-- /.col -->
+              
+            
           </div><!-- /.row -->
         </section><!-- /.content -->
 
@@ -691,8 +532,8 @@
          */
         //LINE randomly generated data
         var sin = []
-        {% for obj in numero_pessoas %}
-        sin.push([{{obj.id}}, {{obj.num_de_pessoas}}]);
+        {% for obj in lista_datahora %}
+        sin.push([{{obj.0}}, {{obj.1}}]);
         {% endfor %}
         var line_data1 = {
           data: sin,
@@ -779,9 +620,8 @@
          * BAR CHART
          * ---------
          */
-
         var bar_data = {
-          data: [["Fila", 2], ["Mesas_Area2", 10], ["Mesas_Area1", 20], ["Corredor", 0.5], ["Area Total", 9]],
+          data: [["Fila", {{tempo_medio}}]],
           color: "#3c8dbc"
         };
         $.plot("#bar-chart", [bar_data], {
